1.修改版本号为v6.3.0.0 2.将生成档img-->bin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ endfunction()
 function(add_appimg target ldscript)
     set(gen_ldscript ${target}_ldscript)
     set(target_map_file ${out_hex_dir}/${target}.map)
-    set(target_img_file ${out_hex_dir}/${target}.img)
+    set(target_img_file ${out_hex_dir}/${target}.bin)
     cpp_only(${gen_ldscript} ${ldscript})
     add_executable(${target} ${ARGN} ${core_stub_o})
     set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${out_hex_dir})
@@ -108,10 +108,10 @@ if(CONFIG_APPIMG_LOAD_FLASH)
 set(CUSTOMER_ID 000)
     set(PLATFORM ${CUSTOMER_ID}_4G04_02_)
     set(MEMORY BP_V)
-    set(APPVERSION 6.2.0.7)
+    set(APPVERSION 6.3.0.0)
     set(target ${PLATFORM}${MEMORY}${APPVERSION}_${VERSION})
     set(__FWVERSION__ ${PLATFORM}${MEMORY}${APPVERSION})
-    set(_BUILDINFO_ EybondFWG)
+    set(_BUILDINFO_ FWG)
     ADD_DEFINITIONS(-Wall -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function)
     ADD_DEFINITIONS(-DMAKE_TIME=\"${VERSION}\")
     ADD_DEFINITIONS(-DMAKE_DATE=\"${LONGDATE}\")
@@ -128,7 +128,7 @@ set(CUSTOMER_ID 000)
     target_link_libraries(${target} PRIVATE ${libc_file_name} ${libm_file_name} ${libgcc_file_name})
 
     set(pac_file ${out_hex_dir}/${target}.pac)
-    set(target_img_file ${out_hex_dir}/${target}.img)
+    set(target_img_file ${out_hex_dir}/${target}.bin)
     pac_init_fdl(init_fdl)
     add_custom_command(OUTPUT ${pac_file}
         COMMAND python3 ${pacgen_py} ${init_fdl}
