1.优化2A06透传端口 2.手机APP读取后发清楚ble AT通用buf:BLE_PublicData

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,8 @@ set(CUSTOMER_ID 000)
     user/public/hard_watchdog.c
     user/public/utility.c
     user/public/run_log.c
+    user/public/grid_tool.c
+    user/public/data_collector_parameter_table.c
     user/ble/ble_task.c
     )   
 
